# LegalSaathi

./: .env.cloudrun  .gcloudignore  .gitignore  ADMIN_COST_MONITORING.md  CLEANUP_SUMMARY.md  CLOUD_RUN_DEPLOYMENT_SUMMARY.md  CONTINGENCY_PLAN.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.cloudrun  ENHANCED_SPEECH_IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION_README.md  README.md  RISK_CLASSIFICATION_SUMMARY.md  SYNCHRONIZATION.md  TECHNICAL_ARCHITECTURE.md  TRANSLATION_AWARE_AUDIO_IMPLEMENTATION.md  UI_UX_IMPROVEMENTS_SUMMARY.md  UNIVERSAL_FEATURES.md  USER_GUIDE.md  VOICE_INPUT_LANGUAGE_FIX.md  app.py  build.bat  build.sh  cloudbuild.yaml  cost_monitoring.db  create_expert_queue_tables.py  create_feedback_tables.py  debug_reviews.py  deploy-cloudrun-optimized.bat  deploy-cloudrun-optimized.sh  deploy-cloudrun.bat  deploy-cloudrun.sh  deploy.bat  deploy.sh  dev.bat  docker-compose.yml  document_classifier.py  (+40 more)
.kiro/specs/document-upload-fix/: requirements.md  tasks.md
.kiro/specs/frontend-ai-enhancements/: design.md  requirements.md  tasks.md
.kiro/specs/legal-saathi-complete-modernization/: design.md  requirements.md  tasks.md
.kiro/specs/legal-saathi-document-advisor/: architecture-notes.md  demo-guide.md  deployment-guide.md  design.md  requirements.md  tasks.md
.kiro/specs/legalsaathi-enhancements/: design.md  requirements.md  tasks.md
client/: .gitignore  ACCESSIBILITY_IMPROVEMENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/public/: sw.js
client/src/: App.tsx  firebaseConfig.ts  index.css  main.tsx  validate-accessibility.js  validate-implementation.js
client/src/components/: AIChat.tsx  AboutUs.tsx  ActionableInsights.tsx  AudioPlayer.tsx  (+58 more)
controllers/: __init__.py  ai_controller.py  auth_controller.py  comparison_controller.py  cost_controller.py  document_controller.py  email_controller.py  expert_auth_controller.py  expert_controller.py  expert_portal_router.py  expert_queue_controller.py  expert_queue_router.py  expert_review_email_controller.py  export_controller.py  health_controller.py  insights_controller.py  speech_controller.py  support_controller.py  translation_controller.py  vision_controller.py
docs/: API_DOCUMENTATION.md  COMPETITION_PRESENTATION.md  EXPERIENCE_LEVEL_PERSONALIZATION.md  HACKATHON_PRESENTATION.md  INSTALLATION.md  RENDER_DEPLOYMENT_GUIDE.md  SUMMARIZATION_FIXES.md  SYSTEM_ARCHITECTURE.md  TASK_6_IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md
md files/: COMPETITION_PROJECT_DESCRIPTION.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_GUIDE.md  GOOGLE_CLOUD_AI_INTEGRATION_SUMMARY.md  JUDGE_ACCESS_AND_TESTING.md  LegalSaathi_Competition_Presentation.md  MARKET_FEASIBILITY_AND_COMPETITIVE_ANALYSIS.md  PERFORMANCE_AND_SECURITY_COMPLIANCE.md  REAL_AI_INTEGRATION_SUMMARY.md  TESTING_AND_SECURITY.md  app_refactored.py
middleware/: email_rate_limiter.py  firebase_auth_middleware.py
models/: __init__.py  ai_models.py  auth_models.py  comparison_models.py  document_models.py  email_models.py  expert_queue_models.py  speech_models.py  support_models.py  translation_models.py
scripts/: install_frontend.py
services/: advanced_rag_service.py  ai_service.py  analysis_enhancement_services.py  api_gateway_client.py  cache_service.py  comparison_service.py  confidence_calculator_service.py  cost_monitoring_service.py  data_masking_service.py  document_service.py  document_summary_translation_service.py  dual_vision_service.py  email_services.py  enhanced_experience_service.py  expert_auth_service.py  expert_pdf_generator.py  expert_queue_service.py  expert_review_email_service.py  expert_services.py  export_service.py  feedback_service.py  file_service.py  firebase_service.py  gmail_service.py  google_cloud_services.py  google_cloud_vision_service.py  google_document_ai_service.py  google_natural_language_service.py  google_speech_service.py  google_translate_service.py  legal_insights_engine.py  lightweight_rag_service.py  multi_service_manager.py  optimized_service_manager.py  personalization_engine.py  quota_manager.py  review_tracking_service.py  service_initializers.py  smtp_email_service.py  startup_manager.py  (+2 more)
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html  results.html
tests/: conftest.py  test_api_contracts.py  test_fastapi_integration.py  test_gemini_integration.py  test_integration.py  test_performance.py  test_speech_endpoints.py
(+44 files in other folders)
