[project]
name = "legal-saathi-document-advisor"
version = "2.0.0"
description = "AI-powered platform for analyzing legal documents with FastAPI backend and React frontend"
authors = [
    {name = "LegalSaathi Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "groq>=0.31.0",
    "google-generativeai>=0.3.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-translate>=3.12.0",
    "google-cloud-documentai>=2.20.0",
    "google-cloud-vision>=3.4.0",
    "google-cloud-language>=2.10.0",
    "google-cloud-speech>=2.21.0",
    "google-cloud-texttospeech>=2.16.0",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.0",
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
    "psutil==6.1.0",
    "pydantic[email]>=2.0.0",
    "httpx>=0.25.0",
    "pydub>=0.25.1",
    "firebase-admin>=6.2.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    "redis>=4.5.0",
    "cachetools>=5.3.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]
requires-python = ">=3.9"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
install-frontend = "cd client && npm install && npm install firebase"
