[project]
name = "legal-saathi-document-advisor"
version = "2.0.0"
description = "AI-powered platform for analyzing legal documents with FastAPI backend and React frontend"
authors = [
    {name = "LegalSaathi Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "groq>=0.31.0",
    "google-generativeai>=0.3.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-api-core>=2.11.0",
    "google-cloud-translate>=3.12.0",
    "google-cloud-documentai>=2.20.0",
    "google-cloud-vision>=3.4.0",
    "google-cloud-language>=2.10.0",
    "google-cloud-speech>=2.21.0",
    "google-cloud-texttospeech>=2.16.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.0",
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
    "psutil==6.1.0",
    "pydantic[email]>=2.0.0",
    "httpx>=0.25.0",
    "pydub>=0.25.1",
    "firebase-admin>=6.2.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    "redis>=4.5.0",
    "cachetools>=5.3.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "spacy>=3.7.0",
    "cryptography>=41.0.0",
    "pydantic-extra-types>=2.0.0",
    "phonenumbers>=8.13.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.7.4",
    "transformers>=4.30.0",
    "nltk>=3.8.0",
    "spacy-transformers>=1.3.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
requires-python = ">=3.9"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "beautifulsoup4>=4.12.0",
]


